# aiPaaS

./: .cursorrules  .gitignore  LICENSE  README.md  docker-compose.yml  lerna.json  llm-serve-keystore.p12  package-lock.json  package.json  project-structure.md
.cursor/rules/: python.mdc
ArchitectureRepository/: README.md
agents/knowledge_rag_agent/: README.md  config.yaml  pyproject.toml  requirements.txt  start.sh
agents/knowledge_rag_agent/docs/: architecture.md
agents/knowledge_rag_agent/src/: config.py  main.py
agents/knowledge_rag_agent/src/application/: command_handlers.py  query_handlers.py
agents/knowledge_rag_agent/src/bootstrap/: bootstrap.py
agents/knowledge_rag_agent/src/config/: config.py
agents/knowledge_rag_agent/src/domain/: models.py  ports.py  services.py
agents/knowledge_rag_agent/src/infrastructure/: __init__.py  embedding_adapter.py  llm_adapter.py  nacos_register.py  permission_adapter.py  vector_db_adapter.py
agents/knowledge_rag_agent/src/interfaces/: rest_api.py
agents/mcp_archi/: README.md  requirements.txt
agents/task-agent/: Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt  run.py
agents/task_agent/: README.md  pyproject.toml
agents/task_agent/src/: main.py
agents/task_agent/src/agents/: task_manager.py
agents/task_agent/src/api/v1/: __init__.py  tasks.py
agents/task_agent/src/application/commands/: task_commands.py
agents/task_agent/src/application/queries/: task_queries.py
agents/task_agent/src/core/: config.py
agents/task_agent/src/domain/aggregates/: base.py  task.py
agents/task_agent/src/domain/entities/: base.py
agents/task_agent/src/domain/events/: base.py
agents/task_agent/src/domain/repositories/: task_repository.py
agents/task_agent/src/domain/value_objects/: task_status.py
agents/task_agent/src/infrastructure/persistence/: database.py  models.py
agents/task_agent/src/infrastructure/repositories/: sqlalchemy_task_repository.py
agents/task_agent/src/interfaces/api/v1/: router.py
agents/task_agent/src/models/: task.py
agents/task_agent/src/schemas/: task.py
agents/task_agent/src/services/: task_service.py
apps/desktop/: generate-routes.config.js  generate-routes.js  package.json
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/architecture/: aixone-app-directory-architecture.md  aixone-app-directory-design-api.md  aixone-app-lib-permission-sdk-architecture.md  aixone-app-platform-architecture.md  aixone-app-workbench-architecture.md  aixone-platform-architecture.md  aixone-tech-auth-architecture.md  aixone-tech-event-center-architecture.md  aixone-tech-platform-architecture.md  axione-app-platform-architecture.md  axione-app-workbench-architecture.md  overview.md  project-structure.md  template.md
docs/development/: permission-module-development-plan.md
frontend/: README.md  lerna.json  package-lock.json  package.json  tsconfig.json
frontend/docs/: aixone-frontend-architecture.md  directory-frontend-integration-plan.md  directory-frontend-integration-summary.md  directory-modules-table-tree-classification.md  permission-frontend-integration-summary.md
frontend/shared/: globs-en.ts  globs-zh-cn.ts  package.json
libs/golang/test/: go.mod  (+3 more)
libs/java/: pom.xml
libs/nacos-client-python/: README.md
libs/python/mf-nacos-service-registrar/: README.md  pyproject.toml  requirements.txt
libs/python/mf-nacos-service-registrar/src/mf_nacos_service_registrar/: __init__.py  registrar.py
libs/python/nacos-client-python/: pyproject.toml
libs/python/nacos-client-python/src/nacos_client_python/: registrar.py
mcp/architect/: pyproject.toml
mcp/architect/src/: __init__.py  main.py
mcp/architect/src/application/: commands.py  queries.py
mcp/architect/src/domain/: entities.py  services.py
mcp/architect/src/interfaces/: api.py
prompts/: README-zh.md
services/: pom.xml
services/aixone-api-gateway/: Dockerfile  pom.xml
services/aixone-app-directory/: pom.xml  start.sh  stop.sh  test-output.txt
services/aixone-app-workbench/: pom.xml  start.sh  stop.sh
services/aixone-event-center/: pom.xml
services/aixone-tech-auth/: Dockerfile  pom.xml  start.sh  stop.sh
services/aixone-tech-event-center/: API_DESIGN_STYLE_ANALYSIS.md  DDD_ARCHITECTURE.md  DESIGN_CODE_ANALYSIS.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_STATUS.md  KAFKA_SETUP.md  pom.xml
services/api-gateway/: pom.xml
services/auth-serve/: pom.xml
services/directory-serve/: pom.xml
services/docs/: architecture-overview.md
services/embed-serves/: README.md  main.py
services/embed_serve/: README.md  main.py  pyproject.toml
services/embed_serve/docs/: architecture.md
services/embed_serves/: README.md  main.py  pyproject.toml
services/event-center/: pom.xml
services/libs-java/: pom.xml
services/llm_serve/: pom.xml
services/meta-center/: README.md  pom.xml
(+1569 files in other folders)
