[project]
name = "knowledge_rag_agent"
version = "0.1.0"
description = "A FastAPI-based RAG agent with DDD and CQRS."
authors = ["jin <your@email.com>"]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[project.dependencies]
fastapi = "^0.115.0"
pydantic = "^2.11.0"
uvicorn = "^0.34.0"
aiohttp = "^3.11.0"
python-dotenv = "^1.1.0"
# 其他依赖可根据 requirements.txt 增补 