[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embed_serves"
version = "0.1.0"
description = "Embedding 服务，FastAPI 实现，支持统一 wheel 构建。"
authors = [
    { name = "jin", email = "jin@jin.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.11.0",
    "uvicorn>=0.34.0",
    "aiohttp>=3.11.0",
    "python-dotenv>=1.1.0"
]

[project.urls]
Homepage = "https://your-homepage-url.com" 